--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Olá GitHub</p>
+    <p>Olá GitHub HHGG</p>
+    <h1>Funciona Meu</h1>
   </body>
 </html>
